1999-07-10  Laurent Pautet  <pautet@dorine.enst.fr>

        * s-gartcp.adb: Recycle Connection_Handler once a connection is
        closed. Reduce memory leaks on tasks (no deallocation of primary
        and secondary stack once a task is terminated.

        * s-gartyp.ads, s-garuni.ads, s-parint.adb: Use Version_Type
        instead of String_Access to define unit versions. Prevent some
        memory leaks.

1999-07-10  Laurent Pautet  <pautet@scapin.enst.fr>

        * s-garfil.adb: Reduce initial size of filter table (not
        frequently used).

        * s-gargro.adb: Deallocate Inner_Query on error or when it is not
        going to be consumed.

        * s-garhea.adb: In Process_Stream, a query can be left not
        entirely consumed because of group communication (a partition
        receives its own query). Deallocated it anyway.

        * s-garopt.adb: Do not redefine Free for GNAT.OS_Lib.String_Access.

        * s-garthi.ads: Remove Getenv.

        * s-garuni.ads: Minor reformatting.

        * s-gartcp.adb: Catch an error to deallocate its error message.

1999-07-01  Samuel Tardieu  <sam@inf.enst.fr>

        * s-garhea.adb: In a comment, change "unfiltered" by
        "filtered". Documentation bug found by code reading.

        * s-gartcp.adb: Use SEC_Size instead of Banner_Size when writing
        the length of the stream in the data buffer. Latent bug found by
        code reading. By change, both constants happened to have the same
        value.

1999-06-18  Laurent Pautet  <pautet@scapin.enst.fr>

        * s-stratt.adb: Use a short short unsigned to marshall a boolean.

1999-06-16  Laurent Pautet  <pautet@scapin.enst.fr>

        * s-garpar.adb, s-garopt.adb: Typo (Excepted -> Expected)

1999-06-02  Laurent Pautet  <pautet@scapin.enst.fr>

        * s-gardeb.adb, s-gaplsp.ads.in: Sanity directory is now an
        env. variable instead of a configuration option (in order to test
        with a binary release).
